phase 2: changed the inputPath parameter